further improved agent and added links to html

--- a/templates/index.html
+++ b/templates/index.html
@@ -269,8 +269,8 @@
             <p>The backend is a Python server wrapped in a Docker container.</p>
             <p>
                 <a href="https://github.com/NicolasSpettel/european-bird-chatbot" class="text-blue-300 underline hover:text-blue-200">GitHub</a> | 
-                <a href="https://smith.langchain.com/o/da3774d7-02f4-436b-968e-e5e25bae8fb9/projects/p/a6ab4304-8a6c-4da3-b8c3-3b05fb5cdf3f?timeModel=%7B%22duration%22%3A%227d%22%7D" class="text-blue-300 underline hover:text-blue-200">LangSmith</a> |
-                <a href="#" class="text-blue-300 underline hover:text-blue-200">LinkedIn</a>
+                <a href="https://smith.langchain.com/public/15e7f59c-7fd9-4d8c-a178-98ae49f61718/d" class="text-blue-300 underline hover:text-blue-200">LangSmith</a> |
+                <a href="https://www.linkedin.com/in/nicolas-spettel-ai-eng/" class="text-blue-300 underline hover:text-blue-200">LinkedIn</a>
             </p>
         </div>
     </div>
